[tool.poetry]
name = "votingapp"
version = "0.1.0"
description = ""
authors = ["yanki <yankisirtas@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
alembic = "^1.5.7"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
SQLAlchemy = "^1.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
